src/objects/BOCA_res__c.object
<CustomObject>
    <description>Attaches to the Program object. Holds branding info for various languages.</description>
    <fields>
        <fullName>BOCA_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOCA Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Heading__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Heading</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Tagline__c</fullName>
        <description>Branded Tagline for This Program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Tagline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Authorized_Signer__c</fullName>
        <label>Consumer Authorized Signer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOCA_Auth_Esso_Consumer</fullName>
                </value>
                <value>
                    <fullName>BOCA_Auth_Esso_Consumer_FR</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_Esso_Consumer</fullName>
                    <isActive>false</isActive>
                    <label>BOCA_TNC_Esso_Consumer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer_Terms_and_Conditions__c</fullName>
        <label>Consumer Terms and Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOCA_TNC_Esso_Consumer</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_Esso_Consumer_FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Form_Account_Error_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Form Account Error Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Form_Disclaimer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Text at the bottom of the conversion form page</inlineHelpText>
        <label>Conversion Form Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Form_Display_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Form Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Form_Heading__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the header below the progress bar that carries to all pages.</inlineHelpText>
        <label>Conversion Form Heading</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Form_Previous_Account_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Form Previous Account Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Form_Thank_You__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion Form Thank You</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country codes to ensure that the BOCA defaults to this country for the billing/contact address.</description>
        <label>Origin Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Disclosure__c</fullName>
        <inlineHelpText>By selecting a Default Disclosure, this will override any values set at the Program level. This is mainly intended for overriding language (i.e. French, Spanish, etc)</inlineHelpText>
        <label>Authorized Signer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOCA_Default_Disclosure_FR</fullName>
                </value>
                <value>
                    <fullName>BOCA_Auth_Esso</fullName>
                </value>
                <value>
                    <fullName>BOCA_Auth_Esso_FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <description>Custom email template id</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the id of the custom email template for this BOCA resource</inlineHelpText>
        <label>Email Template ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FleetEnrollment_Email_Template_Id__c</fullName>
        <description>Id for the email template to be used for the confirmation email</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Id for the email template to be used for the confirmation email</inlineHelpText>
        <label>FleetEnrollment Email Template Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_code__c</fullName>
        <label>ISO code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>en_ca</fullName>
                </value>
                <value>
                    <fullName>en_us</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>fr_ca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_ID_Display_Name__c</fullName>
        <defaultValue>&apos;Loyalty ID&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Loyalty ID Display Name</inlineHelpText>
        <label>Loyalty ID Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Disclosure__c</fullName>
        <inlineHelpText>By selecting a PG Disclosure, this will override any values set at the Program level. This is mainly intended for overriding language (i.e. French, Spanish, etc)</inlineHelpText>
        <label>PG Authorized Signer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOCA_PG_Disclosure_FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Account_Number_Help_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Account Number Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Number_Placeholder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Account Number Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Program_Benefits__c</fullName>
        <description>Benefits that are displayed as bullet points when the program is selected as the primary offering in a BOCA to Prospect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Program Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Sell_Sheets__c</fullName>
        <description>Program specific information</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Program specific marketing information</inlineHelpText>
        <label>Program Sell Sheets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>BOCA_res</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Secondary_Program_Benefits__c</fullName>
        <description>Benefits that are displayed as bullet points when the program is selected as the secondary offering in a BOCA to Prospect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Program Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SideBar__c</fullName>
        <description>HTML of BOCA sidebar</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SideBar</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Side_Panel_Title__c</fullName>
        <description>Sidebar Panel Title</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Side Panel Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions__c</fullName>
        <inlineHelpText>By selecting a Terms and Conditions, this will override any values set at the Program level. This is mainly intended for overriding language (i.e. French, Spanish, etc)</inlineHelpText>
        <label>Terms And Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOCA_TNC_FR</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_Esso</fullName>
                </value>
                <value>
                    <fullName>BOCA_TNC_Esso_FR</fullName>
                </value>
                <value>
                    <fullName>BLANK_TNC</fullName>
                    <isActive>false</isActive>
                    <label>BLANK_TNC</label>
                </value>
                <value>
                    <fullName>BOCA_TNC_MrGas</fullName>
                    <isActive>false</isActive>
                    <label>BOCA_TNC_MrGas</label>
                </value>
                <value>
                    <fullName>BOCA_TNC_MrGas_FR</fullName>
                    <isActive>false</isActive>
                    <label>BOCA_TNC_MrGas_FR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Branding Utility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Branding Utility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branding Utilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>